--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <meta property="og:url" content="https://www.ElonZilla.WIN" />
     <meta property="og:title" content="ElonZilla Stake GAME" />
     <meta property="og:description" content="💎💎💎ElonZilla Token is a stake game contract." />
-    <meta property="og:image" content="" />
+    <meta property="og:image" content="../src/" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       users mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
