--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <meta name="twitter:creator" content="@ElonZilla_office" />
     <meta property="og:url" content="https://www.ElonZilla.WIN" />
     <meta property="og:title" content="ElonZilla Stake GAME" />
-    <meta property="og:description" content="💎💎💎ElonZilla Token is a stake game contract." />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:description" content="💎💎💎ElonZilla Token is a stake game contract.The one with the largest number of [Cumulative Net Buying] $ELONZILLA in every 100 transactions will auto-receive all $BNB in the Rewards pool." />
+    <meta property="og:image" content="/FarmLife_VillageMaps_beffio_8.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       users mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
